# sinauOPiZero2W

./: README.md
01HelloWorld/: .gitignore  CMakeLists.txt  ReadMe.md  generated README.md
01HelloWorld/cmake/: toolchain-gcc.cmake
01HelloWorld/src/: CMakeLists.txt  main.cpp
02StackSmashing/: CMakeLists.txt  ReadMe.md  main.cpp
03Simple3D/: CMakeLists.txt  main.cpp
